--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -69,7 +69,10 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="login-option">
-                            <a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login /  <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="{% url 'registerVendor' %}">
+                            {% if user.None %}
+                            <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'logout' %}">logout /  <span>
+                            {% endif %}
+                            <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'login' %}">Login /  <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="{% url 'registerVendor' %}">
                                 Register
                                 Restaurant </a>
                         </div>
