--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,13 @@
         <!-- CONTENT GOES HERE -->
     {% endblock %}
 
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<!-- Load message -->
+			{% include 'includes/alerts.html' %}
+		</div>
+	</div>
+
     <!-- LOAD FOOTER HERE -->
     {% include 'includes/footer.html' %}
 
