--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -69,12 +69,15 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="login-option">
-                            {% if user.None %}
-                            <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'logout' %}">logout /  <span>
-                            {% endif %}
+                            {% if user.is_authenticated %}
+                            <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">Dashboard </a>
+                            <a class="cs-color cs-popup-joinus-btn login-popup" style="color: red;" href="{% url 'logout' %}">logout </a>
+                            {% else %}
                             <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'login' %}">Login /  <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="{% url 'registerVendor' %}">
                                 Register
                                 Restaurant </a>
+                            {% endif %}
+                            
                         </div>
                     </div>
                 </div>
