--- a/templates/accounts/vendorDashboard.html
+++ b/templates/accounts/vendorDashboard.html
@@ -13,6 +13,42 @@
 						<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
 							<div class="user-dashboard loader-holder">
 								<div class="user-holder">
+									<h5 class="text-uppercase">Overview</h5>
+									<p class="text-right">Logged in as: <b>{{ user.email }}</b></p>
+									<div class="row">
+										<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+											<div class="card">
+												<div class="card-header">
+													Total Orders
+												</div>
+												<div class="card-body text-center">
+													<a href="#"><h5 class="card-title">25</h5></a>
+												</div>
+											</div>
+										</div>
+										<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+											<div class="card">
+												<div class="card-header">
+													Total Revenue
+												</div>
+												<div class="card-body text-center">
+													<a href="#"><h5 class="card-title">NGN 80,000</h5></a>
+												</div>
+											</div>
+										</div>
+										<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+											<div class="card">
+												<div class="card-header">
+													This Month
+												</div>
+												<div class="card-body text-center">
+													<a href="#"><h5 class="card-title">NGN 360,000</h5></a>
+												</div>
+											</div>
+										</div>
+									</div>
+									<br>
+									<br>
 									
 									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 										<div class="row">
