--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -3,7 +3,7 @@
     <!-- Header Start -->
     <header id="header">
         <div class="main-header">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <div class="logo">
@@ -13,7 +13,7 @@
                                 </a>
                             </figure>
                         </div>
-                        <div class="main-nav">
+                        {% comment %} <div class="main-nav">
                                 <nav id="site-navigation" class="main-navigation">
                                     <ul>
                                         <li>
@@ -53,22 +53,23 @@
                                         </li>
                                     </ul>
                                 </nav><!-- .main-navigation -->
-                            </div>
+                            </div> {% endcomment %}
                         
-                        <div class="main-location">
-                            <ul>
-                                <li class="location-has-children choose-location">
-                                    <form action="#">
-                                        <input type="text" value="" name="location" placeholder="Enter your delivery location" autocomplete="off">
-                                        <span id="foodbakery_radius_location_open" class="foodbakery-radius-location"><i class="icon-target5"></i></span>
-                                    </form>
-                                    
-                                </li>
-                            </ul>
-                            </div>
-                    </div>
+                            <div class="main-location ml-5">
+                                <ul>
+                                    <li class="location-has-children choose-location">
+                                        <form action="#">
+                                            <input type="text" value="" name="location" id="location" placeholder="Your current location" autocomplete="off">
+                                            <span id="foodbakery_radius_location_open" class="foodbakery-radius-location" onclick="getLocation()"><i class="icon-target5"></i></span>
+                                        </form>
+                                        
+                                    </li>
+                                </ul>
+                                </div>
+                        </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="login-option">
+                            <a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
                             {% if user.is_authenticated %}
                             <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">Dashboard </a>
                             <a class="cs-color cs-popup-joinus-btn login-popup" style="color: red;" href="{% url 'logout' %}">logout </a>
