--- a/templates/marketplace/listings.html
+++ b/templates/marketplace/listings.html
@@ -58,7 +58,7 @@
                                         </div>
                                         <div class="list-option">
 
-                                            <a href="" class="viewmenu-btn text-color">View Menu</a>
+                                            <a href="{% url 'vendor_detail' vendor.vendor_slug %}" class="viewmenu-btn text-color">View Menu</a>
                                         </div>
                                     </li>
                                     {% endfor %}
