--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -107,7 +107,7 @@
                                                 <div class="price-holder">
                                                     <span class="price">₦{{ food.price }}</span>
 
-                                                    <a href="#" class="decrease_cart" data-id="{{ food.id }}" data-url="" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
+                                                    <a href="#" class="decrease_cart" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
                                                     <label id="qty-{{food.id}}">0</label>
                                                     <a href="#" class="add_to_cart" data-id="{{ food.id }}" data-url=""><i class="icon-plus4 text-color"></i></a>
                                                     
