fixed add to cart

--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -107,7 +107,7 @@
                                                 <div class="price-holder">
                                                     <span class="price">₦{{ food.price }}</span>
 
-                                                    <a href="#" class="decrease_cart" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
+                                                    <a href="#" class="decrease_cart" data-id="{{ food.id }}" data-url="" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
                                                     <label id="qty-{{food.id}}">0</label>
                                                     <a href="#" class="add_to_cart" data-id="{{ food.id }}" data-url="{% url 'add_to_cart' food.id %}"><i class="icon-plus4 text-color"></i></a>
                                                     
@@ -120,13 +120,13 @@
                                         
                                     </div>
 
-                                    {% for item in cart_items %}
+                                    {% comment %} {% for item in cart_items %}
 
                                     <span id="qty-{{item.fooditem.id}}" class="item_qty" data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
 
                                     
 
-                                    {% endfor %}
+                                    {% endfor %} {% endcomment %}
                                 </div>
                             </div>
                             
