--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -120,13 +120,13 @@
                                         
                                     </div>
 
-                                    {% comment %} {% for item in cart_items %}
+                                  
 
-                                    <span id="qty-{{item.fooditem.id}}" class="item_qty" data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
+                                    <span id="qty-{{item.fooditem.id}}" class="item_qty d-none" data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
 
                                     
 
-                                    {% endfor %} {% endcomment %}
+                
                                 </div>
                             </div>
                             
